--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "homepage": "https://gaojianye.github.io/next-terminal-ssh",
   "dependencies": {
     "ace-builds": "^1.4.12",
     "ant-design-vue": "^1.7.2",
