--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,19 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+      
+      - name: Install and Build 🔧 
+        run: |
+          npm install
+          npm run build
+          
       # Runs a single command using the runners shell
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # Settings > Secret 建立的 ACCESS_TOKEN
-          BRANCH: gh-pages # deploy 到 gh-pages 這個分支
-          FOLDER: dist # build 後的資料夾
-          BUILD_SCRIPT: npm install && npm run build # 執行指令
+          token: ${{ secrets.ACCESS_TOKEN }} # Settings > Secret 建立的 ACCESS_TOKEN
+          branch: gh-pages # deploy 到 gh-pages 這個分支
+          folder: dist # build 後的資料夾
+          # BUILD_SCRIPT: npm install && npm run build # 執行指令
